# ESP32-S3-CAM-OVxxxx

examples/Arduino-v3.2.0/examples/01_lvgl_example/: 01_lvgl_example.ino  Board_Configuration.h  Touch_CST816.cpp  Touch_CST816.h  esp_lcd_st7789.c  i2c.cpp  i2c.h  lcd_driver.cpp  lcd_driver.h  lvgl_driver.cpp  lvgl_driver.h  touch_drive.h  touch_driver.cpp
examples/Arduino-v3.2.0/examples/02_CameraWebServer/: 02_CameraWebServer.ino  camera_pins.h  io_extension.cpp
examples/Arduino-v3.2.0/examples/03_audio_out_no_tf/: 03_audio_out_no_tf.ino
examples/Arduino-v3.2.0/examples/04_SDMMC_Test/: 04_SDMMC_Test.ino  io_extension.h
examples/Arduino-v3.2.0/examples/05_audio_out_tf/: 05_audio_out_tf.ino  i2c.cpp
examples/Arduino-v3.2.0/examples/06_esp_sr/: 06_esp_sr.ino  i2c.h
examples/Arduino-v3.2.0/libraries/esp_lcd_jd9853/: esp_lcd_jd9853.h
examples/ESP-IDF-v5.5.1/01_simple_video_server/: partitions.csv  sdkconfig
examples/ESP-IDF-v5.5.1/01_simple_video_server/main/: CMakeLists.txt  idf_component.yml  main.c
examples/ESP-IDF-v5.5.1/02_esp_sr/: CMakeLists.txt  sdkconfig
examples/ESP-IDF-v5.5.1/03_audio_play/: sdkconfig
examples/ESP-IDF-v5.5.1/04_dvp_camera_display/: partitions.csv
examples/ESP-IDF-v5.5.1/04_dvp_camera_display/components/app_camera/: CMakeLists.txt  idf_component.yml  lvgl_app_camera.cpp  lvgl_app_camera.hpp
examples/ESP-IDF-v5.5.1/04_dvp_camera_display/components/app_camera/assets/: icon_camera.c
examples/ESP-IDF-v5.5.1/05_lvgl_brookesia/: sdkconfig
examples/ESP-IDF-v5.5.1/06_usb_host_uvc/: sdkconfig
(+45 files in other folders)
